--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -5,4 +5,17 @@ body{
   height: 2rem;
   width: 300px;
   cursor: pointer;
+  &__track{
+    position: relative;
+    background: rgb(167, 167, 167);
+    border-radius: 5px;
+  }
+  &__thumb{
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    top: -2px;
+    border-radius: 50%;
+    background-color: red;
+  }
 }
