--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -2,6 +2,7 @@ body{
   background-color:rgb(255, 170, 170);
 }
 .range-slider{
+
   height: 2rem;
   width: 300px;
   cursor: pointer;
@@ -9,6 +10,7 @@ body{
     position: relative;
     background: rgb(167, 167, 167);
     border-radius: 5px;
+    margin: 20px 0;
   }
   &__thumb{
     position: absolute;
