test(test,mock): add a plugin special mock class to test methods and behaviour
make a mock class returning an object with plugin components to test their methods, refactor
configService class to hold many instances of options

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -4,9 +4,9 @@ body {
   padding: 10px;
 }
 
-.range-slider-container {
+.range-slider-container{
   width: 300px;
-
+}
   .range-slider {
     cursor: pointer;
 
@@ -32,4 +32,12 @@ body {
       border-radius: 5px;
     }
   }
+
+
+.mock-container{
+  width: 400px;
+height: min-content;
+}
+.test{
+  width: 500px;
 }
