--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -14,7 +14,7 @@ body {
       position: relative;
       background: rgb(167, 167, 167);
       border-radius: 5px;
-      margin: 20px 0;
+      margin: 60px 0;
     }
 
     &__thumb {
@@ -24,6 +24,32 @@ body {
       top: -2px;
       border-radius: 50%;
       background-color: red;
+    }
+
+    &__tooltip{
+      position: absolute;
+      height: 30px;
+      width: 30px;
+      top: -37px;
+      background-color: rgb(212, 69, 69);
+      color: white;
+      font-family: arial;
+      font-size: 14px;
+      display: flex;
+      align-items: center;
+      justify-content: center;   
+      border-radius: 4px;
+      &::after{
+        content: "";
+        position: absolute;
+        bottom: -5px;
+        left: 3px;
+        border-left: 6px solid transparent;
+        border-right: 6px solid transparent;
+        border-top: 6px solid  rgb(212, 69, 69);
+        
+
+      }
     }
     &__fill{
       height: 10px;
