--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -2,68 +2,106 @@ body {
   background-color: rgb(255, 170, 170);
   box-sizing: border-box;
   padding: 10px;
+  font-family: arial;
 }
-
-.range-slider-container{
+*{box-sizing:border-box}
+.range-slider-container {
   width: 300px;
 }
-  .range-slider {
-    cursor: pointer;
 
-    &__track {
-      position: relative;
-      background: rgb(167, 167, 167);
-      border-radius: 5px;
-      margin: 60px 0;
-    }
+.range-slider {
+  cursor: pointer;
+  user-select: none;
+  
+  &__track {
+    position: relative;
+    background: rgb(167, 167, 167);
+    border-radius: 5px;
+    margin: 60px 0;
+  }
 
-    &__thumb {
+  &__ruler {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    height: 12px;
+    bottom: -12px;
+    font-size: 12px;
+    padding-top: 3px;
+    
+  }
+
+  &__tick {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+  }
+
+  &__tick-bar {
+    height: 100%;
+    width: 1px;
+    background-color:rgb(241, 241, 241);
+  }
+
+  &__tick-number{
+    position: absolute;
+    bottom: -1rem;
+    color: rgb(241, 241, 241);
+  }
+
+  &__thumb {
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    top: -2px;
+    border-radius: 50%;
+    background-color: red;
+  }
+
+  &__tooltip {
+    position: absolute;
+    height: 30px;
+    width: 30px;
+    top: -37px;
+    background-color: rgb(212, 69, 69);
+    color: white;
+    font-family: arial;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+
+    &::after {
+      content: "";
       position: absolute;
-      width: 15px;
-      height: 15px;
-      top: -2px;
-      border-radius: 50%;
-      background-color: red;
-    }
+      bottom: -5px;
+      left: 3px;
+      border-left: 6px solid transparent;
+      border-right: 6px solid transparent;
+      border-top: 6px solid rgb(212, 69, 69);
 
-    &__tooltip{
-      position: absolute;
-      height: 30px;
-      width: 30px;
-      top: -37px;
-      background-color: rgb(212, 69, 69);
-      color: white;
-      font-family: arial;
-      font-size: 14px;
-      display: flex;
-      align-items: center;
-      justify-content: center;   
-      border-radius: 4px;
-      &::after{
-        content: "";
-        position: absolute;
-        bottom: -5px;
-        left: 3px;
-        border-left: 6px solid transparent;
-        border-right: 6px solid transparent;
-        border-top: 6px solid  rgb(212, 69, 69);
-        
 
-      }
-    }
-    &__fill{
-      height: 10px;
-      
-      background-color:rgb(255, 73, 73);
-      border-radius: 5px;
     }
   }
 
+  &__fill {
+    height: 10px;
 
-.mock-container{
-  width: 400px;
-height: min-content;
+    background-color: rgb(255, 73, 73);
+    border-radius: 5px;
+  }
 }
-.test{
+
+
+.mock-container {
+  width: 400px;
+  height: min-content;
+}
+
+.test {
   width: 500px;
 }
