feat(stingvalue): add implementation of string value indication, thumbElement data-value = string
tooltips show string values set in userOptions array, data-value of each element is sting,calculated
by number value

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -64,12 +64,13 @@ body {
   &__tooltip {
     position: absolute;
     height: 30px;
-    width: 30px;
+    min-width: 30px;
+    padding: 5px;
     top: -37px;
     background-color: rgb(212, 69, 69);
     color: white;
     font-family: arial;
-    font-size: 14px;
+    font-size: 12px;
     display: flex;
     align-items: center;
     justify-content: center;
