--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,3 +1,5 @@
+
+
 html {
   min-height: 100%;
 }
@@ -34,8 +36,9 @@ min-height: 300px;
   }
 
   &__track {
+    --track-color: #a7a7a7;
     position: relative;
-    background: rgb(167, 167, 167);
+    background: var(--track-color);
     border-radius: 5px;
 
     &--horizontal {
@@ -72,7 +75,7 @@ min-height: 300px;
   }
 
   &__tick {
-
+    --tick-color: white;
     display: flex;
     position: relative;
 
@@ -91,7 +94,7 @@ min-height: 300px;
 
   &__tick-bar {
 
-    background-color: rgb(241, 241, 241);
+    background-color: var(--tick-color);
 
     &--horizontal {
       height: 100%;
@@ -106,7 +109,7 @@ min-height: 300px;
 
   &__tick-number {
     position: absolute;
-    color: rgb(241, 241, 241);
+    color: var(--tick-color);
 
     &--horizontal {
       bottom: -1rem;
@@ -118,27 +121,23 @@ min-height: 300px;
   }
 
   &__thumb {
+    --thumb-color: #d44545;
     position: absolute;
-    width: 15px;
-    height: 15px;
+    // width: 15px;
+    // height: 15px;
     border-radius: 50%;
-    background-color: red;
+    background-color: var(--thumb-color);
     z-index:2;
-    &--horizontal {
-      top: -2px;
-    }
-
-    &--vertical {
-      left: -2px;
-    }
+   
   }
 
   &__tooltip {
+    --tooltip-color:  #d44545;
     position: absolute;
     height: 30px;
     min-width: 30px;
     padding: 5px;
-    background-color: rgb(212, 69, 69);
+    background-color: var(--tooltip-color);
     color: white;
     font-family: arial;
     font-size: 12px;
@@ -172,21 +171,22 @@ min-height: 300px;
       position: absolute;
       border-left: 6px solid transparent;
       border-right: 6px solid transparent;
-      border-top: 6px solid rgb(212, 69, 69);
+      border-top: 6px solid var(--tooltip-color);
     }
   }
 
   &__fill {
-    background-color: rgb(255, 73, 73);
+    --fill-color: #d44545;
+    background-color: var(--fill-color);
     border-radius: 5px;
 
     &--horizontal {
-      height: 10px;
+      height: 100%;
     }
 
     &--vertical {
       position: absolute;
-      width: 10px;
+      width: 100%;
     }
   }
 &__label{
