--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -40,6 +40,7 @@ min-height: 300px;
     position: relative;
     background: var(--track-color);
     border-radius: 5px;
+    z-index: 1;
 
     &--horizontal {
       margin: 60px 0;
@@ -177,9 +178,10 @@ min-height: 300px;
 
   &__fill {
     --fill-color: #d44545;
-    background-color: var(--fill-color);
+    background: var(--fill-color);
     border-radius: 5px;
-
+    z-index: 2;
+   
     &--horizontal {
       height: 100%;
     }
