--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -287,20 +287,28 @@ body {
 .range-slider-controls {
   display: none;
   position: absolute;
+  top: 30px;
+  right: 0;
   z-index: 5;
+  padding: 15px;
   background-color: #fff;
-
+  border-radius: 5px;
+  box-shadow: 1px 0 10px rgb(204, 204, 204);
+  &.enabled{
+    display: block;
+  }
   &__form {
-    width: 300px;
+
     display: flex;
     flex-direction: column;
-    font-size: 13px;
+    font-size: 12px;
     justify-content: space-between;
 
 
   }
 
   &__control {
+
     padding: 5px 0;
     width: 100%;
     display: flex;
@@ -308,6 +316,8 @@ body {
   }
 
   &__input {
+    margin-left: 15px;
+    width: 70px;
     border: 1px solid #bbbbbb;
     border-radius: 4px;
     height: 25px;
@@ -323,6 +333,7 @@ body {
 .burger {
  position: absolute;
   z-index: 3;
+  cursor: pointer;
 top: 0;right: 0;
   &-inner {
     position: relative;
@@ -337,7 +348,7 @@ top: 0;right: 0;
       height: 2px;
     top: 50%;
     transform: translateY(-50%);
-      background-color: red;
+      background-color: #8d8d8d;
     }
     &::before {
       content: "";
@@ -346,7 +357,7 @@ top: 0;right: 0;
       height: 2px;
       top: 0;
       
-      background-color: red;
+      background-color: #8d8d8d;
     }
 
     &::after {
@@ -356,7 +367,7 @@ top: 0;right: 0;
       width: 100%;
       height: 2px;
       bottom: 0;
-      background-color: red;
+      background-color: #8d8d8d;
     }
   }
 }
