--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,5 +1,8 @@
 html {
   min-height: 100%;
+  padding: 0;
+  margin: 0;
+  border: none;
 }
 
 @import "../styles/fonts";
@@ -8,17 +11,10 @@ body {
   height: 100%;
   background-color: #ffffff;
   box-sizing: border-box;
-  padding: 10px;
+  // padding: 10px;
   font-family: "MontserratBold", Arial;
 }
 
-.main {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  gap: 50px;
-  grid-template-rows: minmax(300px,500px);
-
-}
 
 * {
   box-sizing: border-box
@@ -265,7 +261,8 @@ body {
   }
 
   &__label {
-    margin: 30px 0;
+    
+    margin: 10px 0 30px;
   }
 }
 
@@ -275,41 +272,69 @@ body {
   height: min-content;
 }
 
-.test {
-  width: 500px;
-}
 
+
+// ---------- index.ts ----------------
+
+ .wrapper {
+height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+ }
+ .dashboard{
+  height: 100%;
+ min-width: 200px;
+ width: 20%;
+}
+.main {
+  width: 80%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  gap: 50px;
+  grid-template-rows: minmax(300px,500px);
+
+}
 .range-slider-display {
   position: relative;
 
 }
 
 .range-slider-controls {
-  display: none;
-  position: absolute;
-  top: 30px;
-  right: 0;
+max-width: 200px;
+  height: 100vh;
+  // display: none;
+  // position: absolute;
+  position: fixed;
+  // top: 30px;
+  top: 0;
+  // right: 0;
+  left: 0;
   z-index: 5;
   padding: 15px;
   background-color: #fff;
-  border-radius: 5px;
+  // border-radius: 5px;
   box-shadow: 1px 0 10px rgb(204, 204, 204);
   &.enabled{
     display: block;
   }
+  &__title{
+  height: 40px;
+  }
   &__form {
-
+    padding-top: 30px;
     display: flex;
     flex-direction: column;
-    font-size: 12px;
+    font-size: 11px;
     justify-content: space-between;
-
 
   }
 
   &__control {
 
-    padding: 5px 0;
+    padding: 2px 0;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -320,10 +345,14 @@ body {
     width: 70px;
     border: 1px solid #bbbbbb;
     border-radius: 4px;
-    height: 25px;
+    height: 21px;
+    font-size: 12px;
+    color: rgb(88, 88, 88);
   }
 
   &__button {
+    margin-top: 20px;
+    cursor: pointer;
     margin: 0 auto;
     padding: 5px 0;
     width: 150px;
@@ -370,4 +399,24 @@ top: 0;right: 0;
       background-color: #8d8d8d;
     }
   }
+}
+.range-slider-display__modify-button{
+  min-width: 20px;
+  padding: 5px 10px; ;
+  position: absolute;
+  z-index: 3;
+  cursor: pointer;
+top: 0;right: 0;
+border: 1px solid grey;
+border-radius: 4px;
+font-family: "MontserratRegular";
+&:hover{
+  @extend .range-slider-display__modify-button,.active
+}
+  &.active{
+    background-color: #61DDBCFF;
+    color: white;
+  border: none;
+  }
+
 }
