--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -261,7 +261,7 @@ body {
   }
 
   &__label {
-    
+
     margin: 10px 0 30px;
   }
 }
@@ -276,34 +276,37 @@ body {
 
 // ---------- index.ts ----------------
 
- .wrapper {
-height: 100%;
+.wrapper {
+  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
 
- }
- .dashboard{
-  height: 100%;
- min-width: 200px;
- width: 20%;
 }
+
+.dashboard {
+  height: 100%;
+  min-width: 200px;
+  width: 20%;
+}
+
 .main {
   width: 80%;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   gap: 50px;
-  grid-template-rows: minmax(300px,500px);
+  grid-template-rows: minmax(300px, 500px);
 
 }
+
 .range-slider-display {
   position: relative;
 
 }
 
 .range-slider-controls {
-max-width: 200px;
+  max-width: 200px;
   height: 100vh;
   // display: none;
   // position: absolute;
@@ -317,12 +320,15 @@ max-width: 200px;
   background-color: #fff;
   // border-radius: 5px;
   box-shadow: 1px 0 10px rgb(204, 204, 204);
-  &.enabled{
+
+  &.enabled {
     display: block;
   }
-  &__title{
-  height: 40px;
+
+  &__title {
+    height: 40px;
   }
+
   &__form {
     padding-top: 30px;
     display: flex;
@@ -348,6 +354,12 @@ max-width: 200px;
     height: 21px;
     font-size: 12px;
     color: rgb(88, 88, 88);
+    &[type="checkbox"] {
+      width: 12px;
+      margin-right: 57px;
+      height: 12px;
+      
+    }
   }
 
   &__button {
@@ -360,38 +372,42 @@ max-width: 200px;
 }
 
 .burger {
- position: absolute;
+  position: absolute;
   z-index: 3;
   cursor: pointer;
-top: 0;right: 0;
+  top: 0;
+  right: 0;
+
   &-inner {
     position: relative;
     display: block;
     width: 30px;
     height: 20px;
-    
+
     top: 0;
-    span{
+
+    span {
       position: absolute;
       width: 100%;
       height: 2px;
-    top: 50%;
-    transform: translateY(-50%);
+      top: 50%;
+      transform: translateY(-50%);
       background-color: #8d8d8d;
     }
+
     &::before {
       content: "";
       position: absolute;
       width: 100%;
       height: 2px;
       top: 0;
-      
+
       background-color: #8d8d8d;
     }
 
     &::after {
       content: "";
-      
+
       position: absolute;
       width: 100%;
       height: 2px;
@@ -400,23 +416,28 @@ top: 0;right: 0;
     }
   }
 }
-.range-slider-display__modify-button{
+
+.range-slider-display__modify-button {
   min-width: 20px;
-  padding: 5px 10px; ;
+  padding: 5px 10px;
+  ;
   position: absolute;
   z-index: 3;
   cursor: pointer;
-top: 0;right: 0;
-border: 1px solid grey;
-border-radius: 4px;
-font-family: "MontserratRegular";
-&:hover{
-  @extend .range-slider-display__modify-button,.active
-}
-  &.active{
+  top: 0;
+  right: 0;
+  border: 1px solid grey;
+  border-radius: 4px;
+  font-family: "MontserratRegular";
+
+  &:hover {
+    @extend .range-slider-display__modify-button, .active
+  }
+
+  &.active {
     background-color: #61DDBCFF;
     color: white;
-  border: none;
+    border: none;
   }
 
 }
