--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -35,12 +35,12 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   gap: 50px;
-  grid-template-rows: minmax(300px, 400px);
+  grid-template-rows: repeat(auto-fit,400px);
   margin-bottom: 150px;
 }
 
 .range-slider-display {
-
+  height: 350px;
   position: relative;
   padding: 0 20px;
   border-radius: 8px;
@@ -75,11 +75,10 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   background-color: #ffffff;
-  padding: 20px 0;
   width: 100%;
-  height: 300px;
+  height: 100%;
+  
 }
-
 
 
 .mock-container {
