--- a/src/assets/styles/range-slider.scss
+++ b/src/assets/styles/range-slider.scss
@@ -10,7 +10,6 @@
     background: var(--track-color);
     border-radius: 5px;
     z-index: 1;
-
     &--horizontal {
       margin: 60px 0;
     }
@@ -222,6 +221,6 @@
 
   &__label {
 
-    margin: 10px 0 30px;
+    // margin: 10px 0 30px;
   }
 }
