--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -97,7 +97,7 @@ body {
 
 
 .range-slider-controls {
-  max-width: 200px;
+  max-width: 220px;
   height: 100vh;
   // display: none;
   // position: absolute;
@@ -135,6 +135,9 @@ body {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    .label{
+      width: 100px;
+    }
   }
 
   &__input {
