--- a/src/assets/styles/range-slider.scss
+++ b/src/assets/styles/range-slider.scss
@@ -47,17 +47,21 @@
     --tick-color: rgb(179, 179, 179);
     display: flex;
     position: relative;
+    
 
     &--horizontal {
       flex-direction: column;
       align-items: center;
       height: 100%;
+      // height: 12px;
+      // width: 1px;
     }
 
     &--vertical {
       flex-direction: row;
       align-items: center;
       height: 12px;
+      // width: 5px;
     }
   }
 
@@ -98,7 +102,7 @@
     &::before {
       content: "";
       position: relative;
-      display: none;
+      opacity: 0;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
@@ -107,14 +111,15 @@
       height: 25px;
       z-index: 0;
       box-shadow: 0 0 20px var(--thumb-color);
-      opacity: 0.6;
-
+      transition:all 0.8s;
     }
 
     &:hover::before,&.dragging::before {
-      display: block;
+      opacity: 0.6;
     }
-
+    &.dragging::before{
+      opacity: 1;
+    }
     
   }
 
